# openscad

./: .coverage  .gitignore  .gitmodules  README.md  Taskfile.yaml  catalyst_repo.yaml  pyproject.toml
modules/: .gitkeep
openscad/: __init__.py  __main__.py
openscad/tests/fixtures/: invalid_params.yaml  simple_model.scad  valid_params.yaml
oscad_builder/: __init__.py  __main__.py  schemas.py
oscad_builder/tests/: test_init.py
projects/: __init__.py  __main__.py
projects/filament_swatch_system/: params.yml  schema.py  swatches.3mf
projects/filament_swatch_system/assets/rolodex/: README.txt
projects/filament_swatch_system/assets/rolodex/files/: DEMO_-_Axle.stl  DEMO_-_Knob.stl  DEMO_-_Stand_Bar.stl  DEMO_-_Stand_End.stl  DEMO_-_Wheel.stl  Rolodex_V1.scad
projects/filament_swatch_system/assets/swatches/: README.txt
projects/filament_swatch_system/assets/swatches/files/: Rolodex_Filament_Swatch.json  Rolodex_Filament_Swatch.scad  Rolodex_Filament_Swatch.stl  Rolodex_Filament_Swatch_V1.scad  Rolodex_Filament_Swatch_V2.scad
projects/filament_swatch_system/output/: amolen_aquamarine_blue_pla_(cf).stl  amolen_burgundy_red_pla_(cf).stl  amolen_dark_grey_pla_(cf).stl  flash_forge_burnt_titanium_pla.stl  isanmate_glow_green_pla_glow.stl  overture_black_pla.stl
projects/tests/: test.py
