[tool.poetry]
name = "openscad"
version = "0.1.0"
description = ""
authors = ["TheBranchDriftCatalyst <djdanielsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
pydantic = "^2.10.5"
jinja2 = "^3.1.5"
rich = "^13.9.4"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
types-pyyaml = "^6.0.12.20241230"
pydantic-extra-types = "^2.10.2"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pyproject-flake8 = "^7.0.0"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ['pydantic.mypy']
